--- a/_layouts.yml/template.html
+++ b/_layouts.yml/template.html
@@ -17,6 +17,7 @@
         <a href= {{ page.filename }} class="btn">{{ page.title }}</a>
       {% endfor %}
       <a href="https://github.com/Jennifer-Glover/expert-fortnight" class="btn">View on GitHub</a>
+      <a href="https://github.com/Jennifer-Glover/expert-fortnight/projects.md" class="btn">View on GitHub</a>
     </section>
 
     <section class="main-content">
